workspace-sf/force-app/main/default/objects/recorrenciaCobranca__mdt/recorrenciaCobranca__mdt.object-meta.xml
<CustomObject>
    <label>recorrenciaCobranca</label>
    <pluralLabel>recorrenciaCobrancas</pluralLabel>
</CustomObject>