workspace-sf/force-app/main/default/objects/recorrenciaCobranca__mdt/fields/codEmpresa__c.field-meta.xml
<CustomField>
    <fullName>codEmpresa__c</fullName>
    <description>Este campo armazena o código da empresa.</description>
    <label>codEmpresa</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>