workspace-sf/force-app/main/default/objects/recorrenciaCobranca__mdt/fields/codProduto__c.field-meta.xml
<CustomField>
    <fullName>codProduto__c</fullName>
    <description>Este campo armazena o código do produto.</description>
    <label>codProduto</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>