workspace-sf/force-app/main/default/objects/recorrenciaCobranca__mdt/fields/segmentoProduto__c.field-meta.xml
<CustomField>
    <fullName>segmentoProduto__c</fullName>
    <label>segmentoProduto</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>